update, delete and all products done
