# validators/productValidator.js
@@ -1,0 +1,12 @@
+import Joi from "joi"
+
+const productSchema = Joi.object(
+    {
+        name: Joi.string().required(),
+        price: Joi.number().required(),
+        size: Joi.string().required(),
+        image: Joi.string()
+    }
+)
+
+export default productSchema
